fix table header overlap over linker

--- a/stylesheets/table.css
+++ b/stylesheets/table.css
@@ -31,5 +31,5 @@ th {
   position: sticky;
   top: 0;
   background-color: white;
-  z-index: 100;
+  z-index: 10;
 }
